[package]
name = "rust-workspace"
version = "0.1.0"
edition = "2018"

[dependencies]
env_logger = "0.7"

[[bin]]
name = "main"
path = "main.rs"

[[bin]]
name = "test"
path = "src/basic/test.rs"

[[bin]]
name = "string"
path = "src/basic/string_test.rs"

[[bin]]
name = "ref"
path = "src/basic/ref_test.rs"

[[bin]]
name = "struct"
path = "src/basic/struct_test.rs"

[[bin]]
name = "match"
path = "src/basic/match_test.rs"

[[bin]]
name = "vector"
path = "src/basic/vector_test.rs"

[[bin]]
name = "hashmap"
path = "src/basic/hashmap_test.rs"

[[bin]]
name = "generics"
path = "src/basic/generics_test.rs"

[[bin]]
name = "lifetime"
path = "src/basic/lifetime_test.rs"

[[bin]]
name = "box"
path = "src/basic/box_test.rs"