[package]
name = "rust-workspace"
version = "0.1.0"
edition = "2018"

[dependencies]
env_logger = "0.7"

[[bin]]
name = "main"
path = "main.rs"

[[bin]]
name = "test"
path = "src/basic/test.rs"

[[bin]]
name = "stack"
path = "src/basic/collections/stack.rs"

[[bin]]
name = "queue"
path = "src/basic/collections/queue.rs"

[[bin]]
name = "string"
path = "src/basic/string_test.rs"

[[bin]]
name = "ref_test"
path = "src/basic/refs/ref_test.rs"

[[bin]]
name = "range_test"
path = "src/basic/utility/range_test.rs"

[[bin]]
name = "type_id"
path = "src/basic/utility/type_id_test.rs"

[[bin]]
name = "trait"
path = "src/basic/generics/trait_test.rs"

[[bin]]
name = "generic_simple"
path = "src/basic/generics/generic_simple.rs"

[[bin]]
name = "struct"
path = "src/basic/structs/struct_test.rs"

[[bin]]
name = "match"
path = "src/basic/match_test.rs"

[[bin]]
name = "vector"
path = "src/basic/collections/vector_test.rs"

[[bin]]
name = "hashmap"
path = "src/basic/collections/hashmap_test.rs"

[[bin]]
name = "btreemap"
path = "src/basic/collections/btreemap_test.rs"

[[bin]]
name = "generics"
path = "src/basic/generics/generics_test.rs"

[[bin]]
name = "lifetime"
path = "src/basic/lifetime_test.rs"

[[bin]]
name = "box"
path = "src/basic/box_test.rs"

[[bin]]
name = "opt"
path = "src/basic/option_test.rs"

[[bin]]
name = "lifetime_struct"
path = "src/basic/structs/lifetime_struct_test.rs"

[[bin]]
name = "lifetime_vec"
path = "src/basic/structs/lifetime_vec_test.rs"

[[bin]]
name = "any_dbg_logger"
path = "src/examples/utility/any_dbg_logger.rs"

[[bin]]
name = "thread_scope"
path = "src/basic/concurrency/thread_scope.rs"

[[bin]]
name = "mutex_example"
path = "src/basic/concurrency/mutex_example.rs"

[[bin]]
name = "atomic_flags_test"
path = "src/basic/concurrency/atomics/atomic_flags_test.rs"

[[bin]]
name = "lazy_initialization_pattern"
path = "src/basic/concurrency/atomics/lazy_initialization_pattern.rs"