[package]
name = "rust-workspace"
version = "0.1.0"
edition = "2018"

[dependencies]
env_logger = "0.7"

[lib]
doctest = false
test = true

[[bin]]
name = "main"
path = "main.rs"

[[bin]]
name = "test"
path = "src/basic/test.rs"

[[bin]]
name = "stack"
path = "src/collections/stack.rs"

[[bin]]
name = "queue"
path = "src/collections/queue.rs"

[[bin]]
name = "string"
path = "src/basic/string_test.rs"

[[bin]]
name = "ref_test"
path = "src/basic/refs/ref_test.rs"

[[bin]]
name = "range_test"
path = "src/basic/utility/range_test.rs"

[[bin]]
name = "type_id"
path = "src/basic/utility/type_id_test.rs"

[[bin]]
name = "trait"
path = "src/basic/generics/trait_test.rs"

[[bin]]
name = "generic_simple"
path = "src/basic/generics/generic_simple.rs"

[[bin]]
name = "struct"
path = "src/basic/structs/struct_test.rs"

[[bin]]
name = "match"
path = "src/basic/match_test.rs"

[[bin]]
name = "vector"
path = "src/collections/vector_test.rs"

[[bin]]
name = "hashmap"
path = "src/collections/hashmap_test.rs"

[[bin]]
name = "btreemap"
path = "src/collections/btreemap_test.rs"

[[bin]]
name = "generics"
path = "src/basic/generics/generics_test.rs"

[[bin]]
name = "lifetime"
path = "src/basic/lifetime_test.rs"

[[bin]]
name = "box"
path = "src/basic/box_test.rs"

[[bin]]
name = "opt"
path = "src/basic/option_test.rs"

[[bin]]
name = "lifetime_struct"
path = "src/basic/structs/lifetime_struct_test.rs"

[[bin]]
name = "lifetime_vec"
path = "src/basic/structs/lifetime_vec_test.rs"

[[bin]]
name = "any_dbg_logger"
path = "src/patterns/utility/any_dbg_logger.rs"

[[bin]]
name = "atomic_flags_test"
path = "src/concurrency/atomics/atomic_flags_test.rs"

[[bin]]
name = "lazy_initialization_pattern"
path = "src/concurrency/atomics/lazy_initialization_pattern.rs"

[[bin]]
name = "atomic_increment_id_gen"
path = "src/concurrency/atomics/atomic_increment_id_gen.rs"

[[bin]]
name = "fence_test"
path = "src/concurrency/atomics/fence_test.rs"